<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="@style/Widget.AppCompat.ButtonBar">

        <Button
            android:id="@+id/btn_MP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signDetection"
            style="@style/Widget.AppCompat.Button"/>

        <Button
            android:id="@+id/btn_stt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speakIn"
            style="@style/Widget.AppCompat.Button"/>

    </LinearLayout>

    <EditText
        android:id="@+id/etResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:hint="@string/out_message"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_tts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speakOut"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblPitch"
                android:textSize="16sp"/>
            <SeekBar
                android:id="@+id/seek_bar_pitch"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:progress="50"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSpeed"
                android:textSize="16sp"/>
            <SeekBar
                android:id="@+id/seek_bar_speed"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:progress="50"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>